--- a/index.html
+++ b/index.html
@@ -40,15 +40,17 @@
                <div id="navbar" class="collapse">
                   <ul>
                      <li><a href="#" data-nav-section="about">About</a></li>
-                     <li><a href="#" data-nav-section="skills">Skills</a>
-                     </li>
+                     <li><a href="#" data-nav-section="education">Education</a></li>
+                     <li><a href="#" data-nav-section="experience">Work
+                        Experience</a></li>
+                     <!-- <li><a href="#" data-nav-section="skills">Skills</a>
+                     </li> -->
                      <li><a href="#" data-nav-section="projects">Projects</a>
                      </li>
-                     <li><a href="#" data-nav-section="blogs">Blogs</a>
-                     </li>
-                     <li><a href="#" data-nav-section="experience">Work
-                           Experience</a></li>
-                     <li><a href="#" data-nav-section="education">Education</a></li>
+                     <!-- <li><a href="#" data-nav-section="blogs">Blogs</a>
+                     </li> -->
+
+
                      <li><a href="#" data-nav-section="contact">Contact</a>
                      </li>
                   </ul>
@@ -69,7 +71,7 @@
             </section>
             <!--------------------[END] About me---------------------------->
             <!--------------------[START] Skills---------------------------->
-            <section class="colorlib-skills" data-section="skills">
+            <!-- <section class="colorlib-skills" data-section="skills">
                <div class="colorlib-narrow-content">
                   <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                      <div class="about-desc">
@@ -79,7 +81,7 @@
                   <div id="skills" class="row">
                   </div>
                </div>
-            </section>
+            </section> -->
             <!--------------------[END] Skills------------------------------>
             <section class="colorlib-profile" data-section="profile-card">
                <div class="colorlib-narrow-content">
@@ -144,7 +146,7 @@
             </section>
             <!--------------------[END] Projects---------------------------->
             <!--------------------[START] Blogs----------------------------->
-            <section class="colorlib-blogs no-print" data-section="blogs">
+            <!-- <section class="colorlib-blogs no-print" data-section="blogs">
                <div class="colorlib-narrow-content">
                   <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                      <div class="about-desc">
@@ -162,7 +164,7 @@
                      </a>
                   </ul>
                </div>
-            </section>
+            </section> -->
             <!--------------------[END] Blogs------------------------------->
             <!--------------------[START] Work Experience------------------->
             <section class="colorlib-experience" data-section="experience">
