--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <title></title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+   <meta name="description" content="Portfolio webpage of Joshua Dela Cruz" />
    <meta name="keywords"
       content="portfolio,website,personal website,github,projects,computer science and engineering" />
-   <meta name="author" content="Vinay Somawat" />
+   <meta name="author" content="Joshua Dela Cruz" />
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="icon" type="image/png" href="/images/logo.png">
    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
@@ -32,9 +32,7 @@
                <div class="author-img">
                   <img alt="profile-img" src="images/logo.png">
                </div>
-               <h1 id="colorlib-logo"><a href="./index.html">Vinay
-                     Somawat</a>
-               </h1>
+               <h1 id="colorlib-logo"><a href="./index.html">Joshua Dela Cruz</a></h1>
             </div>
             <nav id="colorlib-main-menu" role="navigation" class="navbar" style="padding-top: 2em">
                <div id="navbar" class="collapse">
@@ -87,11 +85,11 @@
                <div class="colorlib-narrow-content">
                   <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                      <div class="profile-cards">
-                        <div class="col">
+                        <!-- <div class="col">
                            <div class="stack-card" user-id="8461233"></div>
-                        </div>
+                        </div> -->
                         <div class="col">
-                           <div class="github-card" username="vinaysomawat"></div>
+                           <div class="github-card" username="josh-rdc"></div>
                         </div>
                      </div>
                   </div>
@@ -138,7 +136,8 @@
                   <div class="row row-bottom-padded-sm animate-box fadeInLeft animated"
                      data-animate-effect="fadeInLeft">
                      <div class="about-desc">
-                        <h1>Work <span style="color: #f9bf3f">Experience</span>
+                        <h1>Work Experience
+                           <!-- <span style="color: #f9bf3f">Experience</span> -->
                         </h1>
                      </div>
                   </div>
